temporary mod of markup

--- a/views/button.html
+++ b/views/button.html
@@ -1,3 +1,18 @@
-<div class="apos-button-contents">
+<!-- <div class="apos-button-contents">
   <a class="apos-simple-button-link" href="{{ item.url }}">{{ item.text }}</a>
+</div> -->
+
+<div class="button snippet-excerpt button-excerpt no-thumbnail">
+  <div class="business-info info-overlay">
+    <date class="date snippet-header">
+      Check this out
+      <span class="tag-icon exclamation }}"></span>
+    </date>
+
+    <h4 class="business-title ocd-snippet-title business">
+      <a href="{{ item.url }}">{{ item.text | e }}</a>
+    </h4>
+  </div>
+
+  <a href="{{ item.url }}" class="ocd-cta purple">View Details</a>
 </div>
