--- a/views/button.html
+++ b/views/button.html
@@ -5,8 +5,7 @@
 <div class="button snippet-excerpt button-excerpt no-thumbnail">
   <div class="business-info info-overlay">
     <date class="date snippet-header">
-      Check this out
-      <span class="tag-icon exclamation }}"></span>
+      <span class="tag-icon exclamation"></span>
     </date>
 
     <h4 class="business-title ocd-snippet-title business">
